# vlmrun-python-sdk

./: .env.template  .pre-commit-config.yaml  .stats.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  OPENAI_INTEGRATION_PLAN.md  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  release-please-config.json
.claude/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish-pypi.yml  python-publish.yml  release-doctor.yml
docs/cli-and-skill/: README.md  SKILL.md
makefiles/: Makefile.admin.mk
requirements/: requirements.txt
scripts/: lint
src/vlm/: __init__.py  _base_client.py  _client.py  _exceptions.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py
tests/: conftest.py  create_test_image.py  test_agent.py  test_artifacts.py  test_client.py  test_dataset.py  test_deepcopy.py  test_evaluations.py  test_exceptions.py  test_extract_files.py  test_feedback.py  test_files.py  test_hub.py  test_inline_skills.py  test_models.py  test_predictions.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  test_types.py  utils.py  verify_deps.py
tests/api_resources/: test_audio.py  test_client.py  test_document.py  test_experimental.py  test_files.py  test_image.py  test_models.py  test_openai.py  test_response.py  test_schema.py  test_web.py
tests/cli/: test_cli_chat.py  test_cli_config.py  test_cli_files.py  test_cli_fine_tuning.py  test_cli_generate.py  test_cli_hub.py  test_cli_models.py  test_cli_predictions.py  test_cli_skills.py  test_files.py  test_finetune.py  test_generate.py  test_hub.py  test_models.py
tests/client/: test_images.py
tests/common/: test_dependencies.py  test_image.py  (+6 more)
vlmrun/: __init__.py  constants.py
(+124 files in other folders)
